--- a/Dissertacia/MyWork/PublishWorks/VestnikSPBUniver_2021/DruzhininVG_MorozovVA.tex
+++ b/Dissertacia/MyWork/PublishWorks/VestnikSPBUniver_2021/DruzhininVG_MorozovVA.tex
@@ -140,13 +140,13 @@ y_{k} =
  \end{cases}
 \end{equation}
 
-\begin{equation} \label{eq9}
+\begin{equation} \label{eq10}
 y_{all} = \sum\limits_{1}^{k} y_{k},
 \end{equation}
 где $\gamma$ --- угол, на который повернулась игла за время моделирования, $z_{all} $ --- компонента отклонения по оси Oz, $y_{all}$ --- компонента отклонения по оси Oy, $y_{n}$ --- отклонение за 1 такт выполнения модели.
 
 Для расчета отклонения от оси Ox воспользуемся следующими выражением:
-\begin{equation} \label{eq10}
+\begin{equation} \label{eq11}
 d_{all} = \sqrt{y_{all}^2  +  z_{all} ^2},
 \end{equation}
 где $d$ --- общее отклонение кончика игла от оси Ox.
@@ -158,11 +158,48 @@ d_{all} = \sqrt{y_{all}^2  +  z_{all} ^2},
 \textbf{2.3 Расчет коэффициентов сопротивления}
 
 Решаемая задача является многопараметрической и зависит от нескольких переменных, а именно от поступательной и вращательной скоростей движения иглы в тканях. Необходимо найти такое решение чтобы различие между экспериментальными и расчетными данными было минимальным. 
-Результаты моделирования по двухмерной модели с постоянным коэффициентом C, взятым из справочника, показали достаточно большие погрешности. Исходя из этого, данный коэффициент будем представлять в виде некоторой функциональной зависимости от скорости перемещения иглы, построенной на основе экспериментальных данных, что позволило бы обеспечить минимальные ошибки при моделировании для вращательной скорости равной нулю:
+Результаты моделирования по двухмерной модели с постоянным коэффициентом C, взятым из справочника, показали достаточно большие погрешности. 
 
-\begin{multline} \label{eq11}
+Исходя из этого, данный коэффициент будем представлять в виде некоторой функциональной зависимости от скорости перемещения иглы, построенной на основе экспериментальных данных.  Данный подход позволил  обеспечить минимальные 
+
+Далее рассмотрим коэффициенты для различных вращательных скоростей 0, 3, 4, 5 рад/сек.  
+
+Для вращательной скорости равной 0 рад/сек:
+\begin{multline} \label{eq12}
 C= 2.2293\cdot10^{11} v^6 - 2.5517\cdot10^{10} v^5+1.788\cdot10^9 v^4 - \\ -2.8053\cdot10^7 v^3 +3.6420\cdot10^5 v^2-2.4583\cdot10^3 v+7.4299.
 \end{multline}
+Для вращательной скорости равной 3 рад/сек:
+\begin{multline} \label{eq13}
+C= -6.1243\cdot10^{18} v^9 + 1.0095\cdot10^{18}v^8 -  7.2393\cdot10^{16} v^7 +\\+ 2.9601\cdot10^{15} v^6 - 7.5961\cdot10^{13} v^5 + 1.2673\cdot10^{12} v^4 - \\-1.3740\cdot10^{10} v^3 + 9.3490\cdot10^7 v^2 - 3.6459\cdot10^5 v+ 634.2858.
+\end{multline}
+Для вращательной скорости равной 4 рад/сек:
+\begin{multline} \label{eq14}
+C= -5.5744\cdot10^{18} v^9 + 9.29\cdot10^{17}v^8 -  6.7439\cdot10^{16} v^7 +\\+ 2.7959\cdot10^{13} v^6 - 7.2889\cdot10^{13} v^5 + 1.2385\cdot10^{12} v^4 - \\-1.3720\cdot10^{10} v^3 + 9.5768\cdot10^7 v^2 - 3.3892\cdot10^5 v+ 693.0468.
+\end{multline}
+Для вращательной скорости равной 5 рад/сек:
+\begin{multline} \label{eq14}
+C= -1.5127\cdot10^{19} v^9 + 2.4827\cdot10^{18}v^8 -  1.7730\cdot10^{17} v^7 +\\+ 7.2242\cdot10^{15} v^6 - 1.8491\cdot10^{14} v^5 + 3.082\cdot10^{12} v^4 - \\-3.3464\cdot10^{10} v^3 + 2.2881\cdot10^7 v^2 - 9.0014\cdot10^5 v+ 1.5829\cdot10^3.
+\end{multline}
+
+
+\begin{tabular}{ | c | c | c | c | c | }
+\hline
+ & \multicolumn{4}{c|}{Коэффициенты С}   \\ 
+ \cline{2-3}
+ \raisebox{1.5ex}[0cm][0cm] {Линейная скорость, мм/с} & 0 рад/с & 2 рад/с & 4 рад/с & 5 рад/с \\ \hline
+3 & 2,664938602 & 97,13340693
+6 & 1,07169768 & 15,73135406
+9 & 0,700671524 & 6,365846027
+12 & 0,659327251 & 3,23079564
+15 & 0,660593963 & 1,842929895
+18 & 0,688335976 & 1,204554851
+21 & 0,779838013 &  0,795031504
+24 & 0,925302352 & 0,559047066
+27 & 1,084357932 & 0,403247032
+30 & 1,319581413 & 0,312718332
+
+\hline
+\end{tabular}
 
 
 \bigskip
