--- a/Dissertacia/MyWork/PublishWorks/VestnikSPBUniver_2021/DruzhininVG_MorozovVA.tex
+++ b/Dissertacia/MyWork/PublishWorks/VestnikSPBUniver_2021/DruzhininVG_MorozovVA.tex
@@ -44,12 +44,12 @@
 Преимущества использования роботов по сравнению с традиционными методами заключаются в том, что роботизированный манипулятор способен обеспечить более высокую точность наведения инструмента чем человек, а также контролировать силовое воздействие, что позволяет рассчитывать не только на повышение качества освоенных в настоящее время операций, но и на создание базиса для разработки принципиально новых хирургических технологий. 
 Другим важным преимуществом является отсутствие прямого контакта врача с радиоактивными источниками, что позволит обезопасить медицинский персонал от сопутствующего радиационного облучения.
 Из-за своих геометрических особенностей и прилагаемых нагрузок в процессе выполнения операции игла деформируется, что приводит к отклонению иглы от прямолинейного движения. 
-В работе ~\cite{three} приведен разбор этапов разработки данной модели приведен анализ существующих методов и подходов, представлена двухмерная модель, описывающая отклонение иглы при движении в тканях человека. 
+В работе ~\cite{three} приведен разбор этапов разработки модели приведен анализ существующих методов и подходов, представлена двухмерная модель, описывающая отклонение иглы при движении в тканях человека. 
 В данной работе будет решена задача позиционирования иглы в системе координат Оxyz, а также рассмотрены способы повышения точности модели. 
-Управление движением иглы осуществляется путем поворота иглы вокруг своей оси. При этом кончик иглы поворачивается, а вместе с ним и плоскость изгиба дуги, 
-и тем самым изменяется направление дальнейшего движения. При введении иглы вдоль прямолинейной траектории ее необходимо постоянно поворачивать.
+Управление движением иглы осуществляется путем ее поворота иглы вокруг своей оси. При этом кончик иглы поворачивается, а вместе с ним и плоскость изгиба дуги, 
+и тем самым изменяется направление дальнейшего движения.
 Разработанную модель можно использовать для построения “MPC-регуляторов” – систем, работающих на основе предсказывающих моделей (Model predictive control).
-К примеру, в статье ~\cite{four} показан ход разработки такой системы, только подход для проектирования модели использовался иной. В ~\cite{four} авторы использовали уравнение Лагранжа для определения положения кончика иглы. Также условия эксперимента и сама игла значительно отличались от тех, которые были рассмотрены в данной статье.
+В статье ~\cite{four} показан ход разработки такой системы, только подход для проектирования модели использовался иной. В ~\cite{four} авторы использовали уравнение Лагранжа для определения положения кончика иглы. Также условия эксперимента и сама игла значительно отличались от тех, которые будут рассмотрены в данной работе.
 
 \bigskip
 \textbf{2. Модель}
@@ -58,7 +58,8 @@
 \textbf{2.1 Двумерная модель}
 
 \bigskip
-Таким образом необходимо разработать модель, которая позволяет прогнозировать и корректировать движение иглы в тканях человека.  В данной работе в качестве моделируемого объекта рассматривается стальная медицинская инъекционная игла длиной 100 мм, диаметром 1 мм с различными углами кончика (рисунок \ref{n1}).
+Сначала рассмотрим двумерную модель.
+Необходимо разработать такую модель, которая позволяет прогнозировать и корректировать движение иглы в тканях человека.  В данной работе в качестве моделируемого объекта представляется стальная медицинская инъекционная игла длиной 100 мм, диаметром 1 мм с различными углами кончика (рисунок \ref{n1}).
 Для построения модели рассмотрим  уравнение равновесия сил при движении иглы ~\cite{Model}: 
 
 \begin{equation} \label{eq1}
@@ -84,15 +85,14 @@ y_{n} = Fl(t)^3 / 2EJ_{x},
 \end{equation}
 
 \begin{equation} \label{eq4}
-\theta = Fl(t)^2 / 2EJ_{x},
+\theta = Fl(t)^2 / 3EJ_{x},
 \end{equation}
 где $n$ --- текущая итерация моделирования, $y_{n}$ --- отклонение кончика иглы, на текущем шаге времени,
 $F$ --- сила действующая на кончик иглы, $J_{x}$ --- осевой момент инерции, 
 $l(t)$ --- длина иглы, находящаяся в тканях человека, $t$ --- время, $E$ --- модуль Юнга, $\theta$ --- угол отклонения.
 
 Для моделирования внешней силы F при перемещении иглы в тканях человека будет использована сила лобового сопротивления:
-
-\begin{equation} \label{eq5}
+c\begin{equation} \label{eq5}
 F = C \rho v^2 S /2, 
 \end{equation}
 где $C$ --- коэффициент сопротивления, $\rho$ --- плотность, $v$ --- скорость перемещения иглы, $S$ --- характерная площадь тела, $S = V^{(2/3)}$, где $V$- объем тела.
@@ -124,8 +124,8 @@ z_{n} =
  \begin{cases}
    y_{n} sin(\gamma) &{ 0 \leq \gamma \leq \pi/2 }\\
    y_{n} sin(\pi - \gamma) &{ \pi/2 \leq \gamma \leq \pi }\\
-  - y_{n} sin( \gamma - \pi) &{ \pi \leq \gamma \leq 3\pi/4 }\\
-   - y_{n} sin(2\pi -  \gamma) &{ 3\pi/4 \leq \gamma \leq 2\pi }\\
+  - y_{n} sin( \gamma - \pi) &{ \pi \leq \gamma \leq 3\pi/2 }\\
+   - y_{n} sin(2\pi -  \gamma) &{ 3\pi/2 \leq \gamma \leq 2\pi }\\
  \end{cases}
 \end{equation}
 
@@ -138,8 +138,8 @@ y_{k} =
  \begin{cases}
    y_{n} cos(\gamma) &{ 0 \leq \gamma \leq \pi/2 }\\
    - y_{n} cos(\pi - \gamma) &{ \pi/2 \leq \gamma \leq \pi }\\
-  - y_{n} cos( \gamma - \pi) &{ \pi \leq \gamma \leq 3\pi/4 }\\
-    y_{n} cos(2\pi -  \gamma) &{ 3\pi/4 \leq \gamma \leq 2\pi }\\
+  - y_{n} cos( \gamma - \pi) &{ \pi \leq \gamma \leq 3\pi/2 }\\
+    y_{n} cos(2\pi -  \gamma) &{ 3\pi/2 \leq \gamma \leq 2\pi }\\
  \end{cases}
 \end{equation}
 
@@ -160,7 +160,7 @@ d_{all} = \sqrt{y_{all}^2  +  z_{all} ^2},
 \bigskip
 \textbf{2.3 Расчет коэффициентов сопротивления}
 
-Решаемая задача является многопараметрической и зависит от нескольких переменных, а именно от поступательной и вращательной скоростей движения иглы в тканях. Необходимо найти такое решение чтобы различие между экспериментальными и расчетными данными было минимальным. 
+Решаемая задача является многопараметрической и зависит от нескольких переменных, а именно от поступательной и вращательной скоростей движения иглы в тканях. Необходимо найти такое решение, чтобы различие между экспериментальными и расчетными данными было минимальным. 
 Результаты моделирования по двухмерной модели с постоянным коэффициентом C, взятым из справочника, показали достаточно большие погрешности. 
 
 Исходя из этого, данный коэффициент будем представлять в виде некоторой функциональной зависимости от скорости перемещения иглы, построенной на основе экспериментальных данных.  Данный подход позволил  обеспечить минимальные погрешности при моделировании.
@@ -209,19 +209,11 @@ C= -1.5127\cdot10^{19} v^9 + 2.4827\cdot10^{18}v^8 -  1.7730\cdot10^{17} v^7 +\\
 \end{center}
 \end{table}
 
-На рисунке  \ref{n3} представлены графики полиномов по которые будем использовать далее для моделирования.
- 
-\begin{figure}[h]
-\center{\includegraphics[scale=0.5]{n3}}
-\center \caption{Графики полиномов коэффициентов лобового сопротивления, С --- коэффициент лобового сопротивления}
-\label{n3}
-\end{figure}
-
 \bigskip
 \textbf{3. Результаты моделирования}
  
-Моделирование проводилось для различных начальных значений. При моделировании использовались следующие поступательные скорости 3, 6, 9, 12, 15, 18, 21, 24, 27, 30 мм/с. Рассматривались следующие вращательные скорости 0, 3, 4, 5 рад/c.  Для различных вращательных скоростей использовались соотвествующие полиномы для расчета коэффициента лобового сопротивления. 
-Далее в таблице \ref{table2} будут приведены результаты моделирования, а в таблице \ref{table3} погрешности моделирования. 
+Моделирование проводилось для различных начальных значений. При моделировании использовались следующие поступательные скорости: 3, 6, 9, 12, 15, 18, 21, 24, 27, 30 мм/с. Рассматривались следующие вращательные скорости: 0, 3, 4, 5 рад/c.  Для различных вращательных скоростей использовались соотвествующие полиномы для расчета коэффициента лобового сопротивления. 
+В таблице \ref{table2}  приведены результаты моделирования.
 
 \begin{table}[h]
 \caption{Отклонение иглы от прямолинейного движения}
@@ -246,39 +238,16 @@ C= -1.5127\cdot10^{19} v^9 + 2.4827\cdot10^{18}v^8 -  1.7730\cdot10^{17} v^7 +\\
 \end{center}
 \end{table}
 
+Погрешности при моделировании с использованием подобранных коэффициентов лобового сопротивления не превышают 0.01 мм.
 
-\begin{table}[h]
-\caption{Погрешности моделирования при различных начальных значениях}
-\label{table3}
-\begin{center}
-\begin{tabular}{ | c | c | c | c | c | }
-\hline
- & \multicolumn{4}{c|}{Погрешности, мм}   \\ 
- \cline{2-5}
- \raisebox{1.5ex}[0cm][0cm] {\specialcell{Линейная \\ скорость,  мм/с}} & 0 рад/с & 2 рад/с & 4 рад/с & 5 рад/с \\ \hline
-3	& 3,39535E-05	& 3,649E-12	& 3,2813E-11	& 3,2824E-11 \\ \hline
-6	& 0,000751748	& 3,0936E-11	& 3,0604E-11	& 1,0628E-11 \\ \hline
-9	& 0,00353867	& 1,4533E-11	& 2,0709E-11	& 1,21036E-10\\ \hline
-12	& 0,005459973	& 3,7398E-11	& 3,5889E-11	& 9,07996E-12\\ \hline
-15	& 0,000964453	& 2,1043E-11	& 7,7041E-11	& 3,5731E-11 \\ \hline
-18	& 0,001586994	& 1,76523E-10	& 1,06911E-10	& 7,3985E-11 \\ \hline
-21	& 0,008611155	& 1,84547E-10	& 1,69734E-10	& 4,9724E-11 \\ \hline
-24	& 0,017577759	& 2,34639E-10	& 7,6203E-11	& 3,101E-11  \\ \hline
-27	& 0,01185293	& 5,94109E-10	& 5,815E-10	& 6,5706E-11 \\ \hline
-30	& 0,002800275	& 4,77134E-10	& 7,68302E-10	& 3,32319E-10\\ \hline
-\end{tabular}
-\end{center}
-\end{table}
-
- Как видно из таблицы  \ref{table3} погрешности при моделировании с использованием подобранных коэффициентах основных на результатах моделирования очень малы.
  
 \bigskip
 \textbf{4. Заключение}
 
-В ходе данной работы была разработана 2-х мерная и 3-х мерная модель описывающая отклонение медицинской инъекционной иглы от прямолинейного движения при движениях в тканях человека.
-Подобраны коэффициенты лобового сопротивления для проведения моделирования.
+В ходе выполнения данной работы были разработаны 2-х мерная и 3-х мерная модели, описывающие отклонение медицинской инъекционной иглы от прямолинейного движения при движениях в тканях человека.
+С целью наибольшего приближению расчетных данных к экспериментальным, осуществлен подбор коэффициентов  лобового сопротивления С при проведении моделирования.
 Проведено моделирование при различных начальных условиях.
-Результаты моделирования с использованием рассчитанных коэффициентов отображают, что данная модель может использоваться в робототехнических системах для прогнозирования движения или  использоваться для проектирования "МРС-регуляторов". Данная модель так же может быть использована для проведения виртуальных операций с инъекциями.
+Результаты моделирования с использованием подобранных коэффициентов С показывают, что данная модель может использоваться в робототехнических системах для прогнозирования движения или  использоваться для проектирования "МРС-регуляторов". Данная модель так же может быть использована для проведения виртуальных операций с инъекциями.
 
 
  
