--- a/Dissertacia/MyWork/PublishWorks/Journal of Physics 2021/DruzhininVG_MorozovVA/DruzhininVG_MorozovVA.tex
+++ b/Dissertacia/MyWork/PublishWorks/Journal of Physics 2021/DruzhininVG_MorozovVA/DruzhininVG_MorozovVA.tex
@@ -211,22 +211,15 @@ In the course of this research, we have developed $2D$ and $3D$ models which des
 \bigskip
 \begin{thebibliography}{99}
 \small
-\bibitem{one}{N.A. Gryaznov, G.S. Kireeva, V.V. Kharlamov, K, Yu. Senchik, D.V. Novitsky, S.A. Nikitin. Control of robot for brachytherapy based on ultrasonic sensor data
-// Robotics and Technical Cybernetics. 1 (10). 2016. pp. 67-71}
-\bibitem{two}{N.A. Gryaznov, G.S. Kireeva, V.V. Kharlamov, K, Yu. Senchik, D.V. Novitsky, S.A. Nikitin. Prospects of application of original multirobotic system for brachytherapy of prostate cancer // Grekov's Bulletin of Surgery   Vol. 176, Ed. 1 2017. pp. 107-111}
-\bibitem{Model}{V.G. Druzhinin, V.A. Morozov, S.A. Nikitin, V.V. Kharlamov. Model of the deviation of the medical needle during the movement in human tissue //Russian Journal of Biomechanics 4 2018 pp. 459-472.}
-\bibitem{four}{Fichtinger G. System for robotically assisted prostate biopsy and therapy with intraoperative CT guidance // Acad. Radiol. – 2002. – Vol. 9. – P. 60–74.}
-\bibitem{five} {Goryacheva I.G., Dosaev M.Z., Selyutskiy Y.V., Yakovenko A.A., Hsiao C., Huang C., Ju M., Yeh C. Control of Insertion of Indenter into Viscoelastic Tissue using a Piezoelectric Drive. Mekhatronika, Avtomatizatsiya, Upravlenie. 2020;21(5):304-311. (In Russ.) https://doi.org/10.17587/mau.21.304-311}
-\bibitem{six}{M. Khadem, B. Fallahi, C. Rossa, R. S. Sloboda, N. Usmani and M. Tavakoli,
-"A mechanics-based model for simulation and control of flexible needle
-insertion in soft tissue," 2015 IEEE International Conference on Robotics
-and Automation (ICRA), Seattle, WA, USA, 2015, pp. 2264-2269, doi:
-10.1109/ICRA.2015.7139499.}
-\bibitem{seven}{Shan Jiang, Pan Li, Yan Yu, Jun Liu, Zhiyong Yang, Experimental study of
+\bibitem{one}{Gryaznov N.A., Kireeva G.S., Kharlamov V.V., Nikitin  S.A. 2016 {\it Control of robot for brachytherapy based on ultrasonic sensor data} (St. Petersburg Robotics and Technical Cybernetics) pp. 67-71.}
+\bibitem{two}{Gryaznov N.A., Kireeva G.S., Kharlamov V.V., Nikitin  S.A. 2017 {\it Prospects of application of original multirobotic system for brachytherapy of prostate cancer} Vol. 176, pp. 107-111.}
+\bibitem{Model}{Druzhinin V.G., Morozov V.A., Nikitin S.A., Kharlamov V.V. 2018 { \it Model of the deviation of the medical needle during the movement in human tissue} (Perm, Russian Journal of Biomechanics)  pp. 459-472.}
+\bibitem{four}{Fichtinger G. 2002 {\it System for robotically assisted prostate biopsy and therapy with intraoperative CT guidance} Vol. 9. pp. 60–74.}
+\bibitem{five} {Goryacheva I.G., Dosaev M.Z., Selyutskiy Y.V., Yakovenko A.A., Hsiao C., Huang C., Ju M., Yeh C. 2020 { \it Control of Insertion of Indenter into Viscoelastic Tissue using a Piezoelectric Drive} pp. 304-311.}
+\bibitem{six}{Khadem M., Fallahi B., Rossa  C., Sloboda  R. S.,  Usmani N. and Tavakoli M., 2015 { \it A mechanics-based model for simulation and control of flexible needle insertion in soft tissue} pp. 2264-2269.}
+\bibitem{seven}{Shan Jiang, Pan Li, Yan Yu, Jun Liu, Zhiyong Yang, 2014 {\it Experimental study of
 needle–tissue interaction forces: Effect of needle geometries, insertion
-methods and tissue characteristics, Journal of Biomechanics, Volume 47,
-Issue 13, 2014, Pages 3344-3353,
-https://doi.org/10.1016/j.jbiomech.2014.08.007.}
+methods and tissue characteristics},Vol. 47, pp 3344-3353. }
 
 
 \end{thebibliography}
